# Fluids2d

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/experiments/: check_reversibility.py  forced_convection.py  geos_adj.py  lockexchange.py  tracer_advection.py  vector_advection.py  vortex.py  warm_bubble.py
src/experiments/inpreparation/: gyre.py  internalwave_maker.py  kelvin_helmholtz.py  leewave.py  postprocessing.py  rsw_with_topo.py  shearinstab.py  shielded_vortex.py  wavebreaking.py
src/fluids2d/: __about__.py  __init__.py  animation.py  diagnostics.py  elliptic.py  equations.py  integrators.py  io.py  meshes.py  model.py  movietools.py  noslip.py  operators.py  parallel.py  param.py  restart.py  states.py  timeline.py  tools.py  weno.py
tests/: test_models.py
